--- a/src/services.html
+++ b/src/services.html
@@ -20,7 +20,7 @@
           <h1 class="tl1">Услуги</h1>
           <ul class="service__c-list">
             <li class="service__c-list-e">
-              <h3 class="tl3 txt-up">01 Проектирование</h3>
+              <h3 class="tl3 txt-up"><span>01</span> Проектирование</h3>
               <hr>
 
               <div class="service__c-list-e-img">
@@ -45,7 +45,7 @@
 
             </li>
             <li class="service__c-list-e service__c-list-e_reverse">
-              <h3 class="tl3 txt-up">02 строительство</h3>
+              <h3 class="tl3 txt-up"><span>02</span> строительство</h3>
               <hr>
 
 
@@ -70,7 +70,7 @@
 
             </li>
             <li class="service__c-list-e">
-              <h3 class="tl3 txt-up">03 Эксплуатация</h3>
+              <h3 class="tl3 txt-up"><span>03</span> Эксплуатация</h3>
               <hr>
 
               <div class="service__c-list-e-img">
