--- a/src/projects-detail.html
+++ b/src/projects-detail.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="container projects-detail-top__info">
-          <h1 class="tl2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, corporis!</h1>
+          <h1 class="tl2 txt-up">Alfa Research Center</h1>
 
           <div class="desktop">
             <div class="container projects-detail-top__info-nav">
