--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
           </div>
         </div>
         <div class="container section-bg__c">
-          <h1 class="tl1 col-wh txt-up txt-wrap">Строительная
+          <h1 class="tl2 col-wh txt-up txt-wrap">Строительная
             компания TCM</h1>
         </div>
       </section>
@@ -226,7 +226,7 @@
 
         <h2 class="tl2 txt-up"> Наши клиенты</h2>
 
-        <div class="clients container">
+        <div class="clients ">
     <ul class="clients-list">
         <li>
             <img src="./assets/images/partners/alfabank.svg" alt="partner">
@@ -300,16 +300,16 @@
       </section>
 
       <section class="about-command">
-        <div class="container about-command__c">
+        <div class="container ">
 
-          <div class="section-heading section-heading_about">
+          <div class="section-heading section-heading_about about-command__c">
             <p class="section-heading-name">Наш подход</p>
             <h2 class="tl2 section-heading-ttl">У нас работают
               профессионалы
               своего дела
             </h2>
             <div class="section-heading-body">
-              <p class="txt-wrap">Команда ТСМ всегда стремится соответствовать высоким требованиям и превосходить ожиданиям клиента.
+              <p class="txt-wrap txt20">Команда ТСМ всегда стремится соответствовать высоким требованиям и превосходить ожиданиям клиента.
                 
                 Достичь этой цели возможно только при ответственном отношении на каждом этапе выполнения работ и
                 показывая высокий уровень качества, предоставляемых услуг.
