--- a/main.html
+++ b/main.html
@@ -144,7 +144,7 @@
             </p>
           </div>
         </div>
-        <div class="clients container">
+        <div class="clients ">
     <ul class="clients-list">
         <li>
             <img src="./assets/images/partners/alfabank.svg" alt="partner">
@@ -190,8 +190,8 @@
       </section>
       <!--  -->
       <section class="our-projects">
-    <div class="container our-projects__c">
-        <div class="section-heading-swiper">
+    <div class=" our-projects__c">
+        <div class="section-heading-swiper container">
 
             <div class="swiper-btn-container nav">
                 <button class="swiper-btn swiper-btn-prev "></button>
