--- a/main.html
+++ b/main.html
@@ -134,7 +134,7 @@
         <div class="container our-way__c">
           <div class="section-heading">
             <p class="section-heading-name">Наш подход</p>
-            <h2 class="tl2 section-heading-ttl">ответственное
+            <h2 class="tl2 section-heading-ttl">ответственное <br/>
               отношение и высокий уровень
               качества предоставляемых услуг
             </h2>
@@ -145,7 +145,50 @@
           </div>
         </div>
         <div class="clients ">
-    <ul class="clients-list">
+    <ul class="clients-list marquee">
+        <li>
+            <img src="./assets/images/partners/alfabank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/amway.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/ashan.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/huawei.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/lamoda.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/otp-bank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/psbank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/regus.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/regus.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/stada.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/tbank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/trend.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/vtb.svg" alt="partner">
+        </li>
+    </ul>
+</div>
+<div class="clients _rev">
+    <ul class="clients-list marquee">
         <li>
             <img src="./assets/images/partners/alfabank.svg" alt="partner">
         </li>
@@ -280,7 +323,7 @@
 
           <div class="section-heading">
             <p class="section-heading-name">Услуги</p>
-            <h2 class="tl2 section-heading-ttl">выполняем полный
+            <h2 class="tl2 section-heading-ttl">выполняем полный <br/>
               комплекс услуг
             </h2>
             <p class="section-heading-body">ТСМ выполняет комплекс строительно-монтажных и отделочных
@@ -309,24 +352,24 @@
             <img src="./assets/images/principles.webp" alt="section-bg">
           </div>
           <div class="container princeples__top">
-            <h2 class="tl2 txt-up">НадЁжность
-              и профессионализм:
+            <h2 class="tl2 txt-up">НадЁжность <br/>
+              и профессионализм: <br/>
               наши принципы в строительстве </h2>
           </div>
         </div>
         <ul class="container princeples__bottom">
           <li class="princeples__bottom-item">
-            <p class="princeples__bottom-item-count">364</p>
+            <p class="princeples__bottom-item-count" data-counter="364">0</p>
             <p class="tl3 txt-up">Профессиональные
               мастера и рабочие</p>
           </li>
           <li class="princeples__bottom-item">
-            <p class="princeples__bottom-item-count">51</p>
+            <p class="princeples__bottom-item-count" data-counter="51">0</p>
             <p class="tl3 txt-up">Человек в инженерно-
               техническом отделе</p>
           </li>
           <li class="princeples__bottom-item">
-            <p class="princeples__bottom-item-count">230</p>
+            <p class="princeples__bottom-item-count" data-counter="230">0</p>
             <p class="tl3 txt-up">Реализованных
               проектов</p>
           </li>
