--- a/projects-detail.html
+++ b/projects-detail.html
@@ -202,17 +202,17 @@
         </div>
       </section>
       <section class="projects-detail projects-detail-imgs">
-        <ul class="container projects-detail-imgs__c">
-          <li class="projects-detail-imgs__c-e">
+        <div class="container projects-detail-imgs__c">
+          <a href="./assets/images/projects.webp" data-fancybox="project" class="projects-detail-imgs__c-e">
             <img src="./assets/images/projects.webp" alt="img">
-          </li>
-          <li class="projects-detail-imgs__c-e">
+          </a>
+          <a href="./assets/images/news.webp" data-fancybox="project" class="projects-detail-imgs__c-e">
             <img src="./assets/images/news.webp" alt="img">
-          </li>
-          <li class="projects-detail-imgs__c-e">
+          </a>
+          <a href="./assets/images/heading.webp" data-fancybox="project" class="projects-detail-imgs__c-e">
             <img src="./assets/images/heading.webp" alt="img">
-          </li>
-        </ul>
+          </a>
+        </div>
       </section>
 
     </main>
