--- a/services.html
+++ b/services.html
@@ -119,7 +119,7 @@
     </ul>
 </div>
 
-          <h1 class="tl1">Услуги</h1>
+          <h1 class="tl1 txt-up">Услуги</h1>
           <ul class="service__c-list">
             <li class="service__c-list-e">
               <h3 class="tl3 txt-up"><span>01</span> Проектирование</h3>
