--- a/about.html
+++ b/about.html
@@ -125,8 +125,8 @@
           </div>
         </div>
         <div class="container section-bg__c">
-          <h1 class="tl2 col-wh txt-up txt-wrap">Строительная
-            компания TCM</h1>
+          <h1 class="tl1 col-wh txt-up txt-wrap">Строительная
+            компания <br class="mobile"/>TCM</h1>
         </div>
       </section>
 
@@ -156,7 +156,7 @@
               </li>
               <li>
                 <span class="tl2 col-grn">13</span>
-                <span class="txt18">Лет опыта</span>
+                <span class="txt18">	<span> </span> Лет опыта</span>
               </li>
             </ul>
           </div>
@@ -227,7 +227,50 @@
         <h2 class="tl2 txt-up"> Наши клиенты</h2>
 
         <div class="clients ">
-    <ul class="clients-list">
+    <ul class="clients-list marquee">
+        <li>
+            <img src="./assets/images/partners/alfabank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/amway.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/ashan.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/huawei.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/lamoda.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/otp-bank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/psbank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/regus.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/regus.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/stada.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/tbank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/trend.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/vtb.svg" alt="partner">
+        </li>
+    </ul>
+</div>
+<div class="clients _rev">
+    <ul class="clients-list marquee">
         <li>
             <img src="./assets/images/partners/alfabank.svg" alt="partner">
         </li>
