--- a/not-found.html
+++ b/not-found.html
@@ -193,7 +193,7 @@
             <button class="modal-close moda-closer">
             </button>
             <div class="modal-commercial__c">
-                <span class="modal-commercial__c-ttl col-wh">подпишитесь на наши социальные сети</span>
+                <span class="modal-ttl modal-commercial__c-ttl col-wh">подпишитесь на наши социальные сети</span>
                 <p class="modal-txt txt20 col-wh">Следите за последними новостями и читайте полезные статьи в наших социальных
                     сетях</p>
                 <div class=" modal-commercial__c-links">
