--- a/about.html
+++ b/about.html
@@ -352,8 +352,7 @@
               своего дела
             </h2>
             <div class="section-heading-body">
-              <p class="txt-wrap txt20">Команда ТСМ всегда стремится соответствовать высоким требованиям и превосходить ожиданиям клиента.
-                
+              <p class="txt20">Команда ТСМ всегда стремится соответствовать высоким требованиям и превосходить ожиданиям клиента.
                 Достичь этой цели возможно только при ответственном отношении на каждом этапе выполнения работ и
                 показывая высокий уровень качества, предоставляемых услуг.
               </p>
@@ -454,7 +453,7 @@
             <button class="modal-close moda-closer">
             </button>
             <div class="modal-commercial__c">
-                <span class="modal-commercial__c-ttl col-wh">подпишитесь на наши социальные сети</span>
+                <span class="modal-ttl modal-commercial__c-ttl col-wh">подпишитесь на наши социальные сети</span>
                 <p class="modal-txt txt20 col-wh">Следите за последними новостями и читайте полезные статьи в наших социальных
                     сетях</p>
                 <div class=" modal-commercial__c-links">
