--- a/main.html
+++ b/main.html
@@ -118,7 +118,7 @@
                 </h1>
             </div>
             <div class="heading__c-bottom">
-                <p class="txt20">Индивидуальный подход
+                <p class="txt20">Индивидуальный подход <br>
                     и профессионализм позволяют компании ТСМ
                     достигать безупречных результатов
                     в проектах любой сложности
@@ -626,7 +626,7 @@
             <button class="modal-close moda-closer">
             </button>
             <div class="modal-commercial__c">
-                <span class="modal-commercial__c-ttl col-wh">подпишитесь на наши социальные сети</span>
+                <span class="modal-ttl modal-commercial__c-ttl col-wh">подпишитесь на наши социальные сети</span>
                 <p class="modal-txt txt20 col-wh">Следите за последними новостями и читайте полезные статьи в наших социальных
                     сетях</p>
                 <div class=" modal-commercial__c-links">
