--- a/src/about.html
+++ b/src/about.html
@@ -23,8 +23,8 @@
           </div>
         </div>
         <div class="container section-bg__c">
-          <h1 class="tl2 col-wh txt-up txt-wrap">Строительная
-            компания TCM</h1>
+          <h1 class="tl1 col-wh txt-up txt-wrap">Строительная
+            компания <br class="mobile"/>TCM</h1>
         </div>
       </section>
 
@@ -54,7 +54,7 @@
               </li>
               <li>
                 <span class="tl2 col-grn">13</span>
-                <span class="txt18">Лет опыта</span>
+                <span class="txt18">	<span> </span> Лет опыта</span>
               </li>
             </ul>
           </div>
@@ -165,8 +165,7 @@
               своего дела
             </h2>
             <div class="section-heading-body">
-              <p class="txt-wrap txt20">Команда ТСМ всегда стремится соответствовать высоким требованиям и превосходить ожиданиям клиента.
-                
+              <p class="txt20">Команда ТСМ всегда стремится соответствовать высоким требованиям и превосходить ожиданиям клиента.
                 Достичь этой цели возможно только при ответственном отношении на каждом этапе выполнения работ и
                 показывая высокий уровень качества, предоставляемых услуг.
               </p>
