--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
       <li> <a href="./services.html">Услуги</a> </li>
       <li> <a href="./recomendation.html">Рекомендации</a> </li>
       <li> <a href="./not-found.html">404</a> </li>
+      <li> <button class="modal-opener" data-modal="commercial">commercial</button> </li>
+      <li> <button class="modal-opener" data-modal="callback">callback</button> </li>
+
 
 
 
@@ -130,6 +133,7 @@
       }
     }
   </style>
+  <include src="./components/_modals.html"></include>
 </body>
 
 </html>
