--- a/src/services.html
+++ b/src/services.html
@@ -17,7 +17,7 @@
 
         <div class="container service__c">
           <include src="./components/_bread.html"></include>
-          <h1 class="tl1">Услуги</h1>
+          <h1 class="tl1 txt-up">Услуги</h1>
           <ul class="service__c-list">
             <li class="service__c-list-e">
               <h3 class="tl3 txt-up"><span>01</span> Проектирование</h3>
