--- a/contacts.html
+++ b/contacts.html
@@ -130,7 +130,7 @@
                 </div>
 
             </section>
-            <!--  -->
+            <!-- тебе нужна она -->
             <section class="contacts">
                 <div class="container contacts__c">
                     <div class="contacts__c-cell">
@@ -213,7 +213,7 @@
 
                             <label class="input-text form-input ">
                                 <span class="input-text-input">
-                                    <input type="text" data-required="y" name="name" placeholder="input-text">
+                                    <input type="text" data-required="y" name="name" placeholder="Имя">
                                 </span>
 
                                 <span class="input-text-error"></span>
@@ -222,7 +222,7 @@
 
                             <label class="input-text form-input ">
                                 <span class="input-text-input">
-                                    <input type="text" name="phone" data-required="y" placeholder="input-text">
+                                    <input type="text" name="phone" data-required="y" placeholder="Телефон">
                                 </span>
 
                                 <span class="input-text-error"></span>
@@ -231,7 +231,7 @@
 
                             <label class="input-text form-input ">
                                 <span class="input-text-input">
-                                    <input type="text" data-required="y" name="commentary" placeholder="input-text">
+                                    <input type="text" data-required="y" name="commentary" placeholder="Комментарий">
                                 </span>
 
                                 <span class="input-text-error"></span>
@@ -258,7 +258,7 @@
                     </div>
                 </div>
             </section>
-            <!--  -->
+            <!-- тебе нужна она -->
         </main>
         <footer class="footer bg-bg">
     <div class="footer-wrp ">
