--- a/contacts.html
+++ b/contacts.html
@@ -231,7 +231,7 @@
 
                             <label class="input-text form-input ">
                                 <span class="input-text-input">
-                                    <input type="text" data-required="y" name="commentary" placeholder="Комментарий">
+                                    <input type="text"  name="commentary" placeholder="Комментарий">
                                 </span>
 
                                 <span class="input-text-error"></span>
