--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <div class="root">
+   
     <ol>
+      <li> <a href="./contacts.html" class="tl2"> контакты</a></li>
       <li> <a href="./main.html">Главная</a> </li>
       <li> <a href="./projects.html">Проекты</a> </li>
       <li> <a href="./projects-detail.html">Проекты детальная</a> </li>
