--- a/src/about.html
+++ b/src/about.html
@@ -39,21 +39,21 @@
               нашу приверженность к постоянному улучшению, оптимизированию процессов и повышению эффективности нашей
               деятельности.
             </p>
-            <ul class="about-princeples__c-body-items">
+            <ul class="about-princeples__c-body-items counter">
               <li>
-                <span class="tl2 col-grn">415</span>
+                <span class="tl2 col-grn" data-counter="415">0</span>
                 <span class="txt18">Профессиональные мастера и рабочие</span>
               </li>
               <li>
-                <span class="tl2 col-grn">200+</span>
+                <span class="tl2 col-grn _plus" data-counter="200">0</span>
                 <span class="txt18">ТЫС. КВ. М НЕДВИЖИМОСТИ </span>
               </li>
               <li>
-                <span class="tl2 col-grn">250+</span>
+                <span class="tl2 col-grn _plus" data-counter="25">0</span>
                 <span class="txt18">Реализованных проектов</span>
               </li>
               <li>
-                <span class="tl2 col-grn">13</span>
+                <span class="tl2 col-grn" data-counter="13">0</span>
                 <span class="txt18">	<span> </span> Лет опыта</span>
               </li>
             </ul>
@@ -140,9 +140,9 @@
         </div>
         <div class="container section-bg__c ">
           <div class="about-ready__c">
-            <h2 class="tl1 col-wh txt-up txt-wrap">Мы готовы
-              в комплексе решить
-              задачи, стоящие
+            <h2 class="tl2 col-wh txt-up">Мы готовы <br/>
+              в комплексе решить <br/>
+              задачи, стоящие <br/>
               перед Вами</h2>
 
             <p class="txt20 col-wh">Воплотим любую архитектурную идею, предложим оптимальные решения и реализуем Ваш
