--- a/src/main.html
+++ b/src/main.html
@@ -73,7 +73,7 @@
               наши принципы в строительстве </h2>
           </div>
         </div>
-        <ul class="container princeples__bottom">
+        <ul class="container princeples__bottom counter">
           <li class="princeples__bottom-item">
             <p class="princeples__bottom-item-count" data-counter="364">0</p>
             <p class="tl3 txt-up">Профессиональные
